# glfwtest2

./: .clang-format  CMakeLists.txt
Logger/: CMakeLists.txt
Logger/include/: Logger.h
Logger/src/: Logger.cpp
ShaderPreview/: CMakeLists.txt
ShaderPreview/assets/: log.txt
ShaderPreview/assets/models/suzanne/: suzanne.mtl
ShaderPreview/assets/shaders/: 3dProj.vert  Lighting.frag  PointLight.frag  lightSource.frag  spotlightlighting.frag
ShaderPreview/include/: Camera.h  Mesh.h  Model.h  Shader.h  SphereModel.h  Types.h
ShaderPreview/src/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  SphereModel.cpp  main.cpp
assets/shaders/: 3dProj.vert  gouraud.frag  gouraud.vert  lightSource.frag  lighting.frag
include/: camera.h  shader.h  types.h
src/: glad.c  main.cpp
